# lotux

./: README.md
client/: INSTALL  INSTALL.GERMAN  Makefile.in  blackstone.xpm  client.cc  client.h  config.h.in  configure  configure.in  generaltab.cc  generaltab.h  identitytab.cc  identitytab.h  lotus.cc  lotus.h  lotus3d.cc  lotus3d.h  lotus_de.html  lotus_en.html  lotux.pro  lotux256.xpm  lotux_de.html  lotux_de.qm  lotux_de.ts  lotux_en.html  main.cc  mainwindow.cc  mainwindow.h  networktab.cc  networktab.h  protocol.cc  protocol.h  settings.cc  settings.h  settingsdialog.cc  settingsdialog.h  whitestone.xpm
server/: Client.hs  Functions.hs  INSTALL  INSTALL.GERMAN  Lotus.hs  LotusKI.hs  LotusServer.hs  Makefile.in  MartinKI.hs  MoldieKI.hs  PerfectKI.hs  Protocol.hs  RandomKI.hs  Settings.hs  Talk.hs  configure  configure.in
