dnl configure.in
dnl 25.10.2002
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl Copyright (C) 2001-2002 by Carsten Moldenauer and Martin Huschenbett

AC_INIT(main.cc)

AC_ARG_WITH(qt3-includes,
	[ --with-qt3-includes=DIR       Qt3 include files are in DIR (\$QTDIR/include)],
	[QT3INCDIR=$withval], [QT3INCDIR="\$(QTDIR)/include"])
AC_ARG_WITH(qt3-libraries,
	[ --with-qt3-libraries=DIR      Qt3 library files are in DIR (\$QTDIR/lib)],
	[QT3LIBDIR=$withval], [QT3LIBDIR="\$(QTDIR)/lib"])
AC_ARG_WITH(x11-includes,
	[ --with-x11-includes=DIR       X11 include files are in DIR (/usr/X11R6/include)],
	[X11INCDIR=$withval], [X11INCDIR="/usr/X11R6/includes"])
AC_ARG_WITH(x11-libraries,
	[ --with-x11-libraries=DIR      X11 library files are in DIR (/usr/X11R6/lib)],
	[X11LIBDIR=$withval], [X11LIBDIR="/usr/X11R6/lib"])
AC_ARG_WITH(opengl-includes,
	[ --with-opengl-includes=DIR    OpenGL include files are in DIR (/usr/include/GL)],
	[GLINCDIR=$withval], [GLINCDIR="/usr/include/GL"])
AC_ARG_WITH(opegl-libraries,
	[ --with-opengl-libraries=DIR   OpenGL library files are in DIR (/usr/lib)],
	[GLLIBDIR=$withval], [GLLIBDIR="/usr/lib"])
AC_ARG_WITH(cxx,
	[ --with-cxx=CXX                Run CXX as C++ compiler],
	[CXX=$withval])
AC_ARG_WITH(cxxflags,
	[ --with-cxxflags=CXXFLAGS      Use CXXFLAGS as flags for the C++ copiler],
	[CXXFLAGS=$withval], [CXXFLAGS=-DQT_NO_DEBUG])
AC_ARG_WITH(link,
	[ --with-link=LINK              Run LINK as linker],
	[LINK=$withval])
AC_ARG_WITH(lflags,
	[ --with-lflags=LFLAGS          Use LFLAGS as flags for the linker],
	[LFLAGS=$withval], [LFLAGS=])
AC_ARG_WITH(moc,
	[ --with-moc=MOC                Run MOC as Qt meta object compiler],
	[MOC=$withvalL])

AC_PATH_PROG(TEST,test)

AC_PATH_PROG(GXX,g++,g++-not-found)

if $TEST -z "$CXX"; then
	if $TEST -"$GXX" = g++-not-found; then
		AC_PATH_PROG(CXX,gcc,gcc-not-found)
		if $TEST "$CXX" = gcc-not-found; then
			AC_MSG_ERROR([Cannot find any C++ compiler!])
		fi
	else
		CXX="$GXX"
	fi
fi

if $TEST -z "$LINK"; then
	if $TEST -"$GXX" = g++-not-found; then
		AC_PATH_PROG(LINK,ld,ld-not-found)
		if $TEST "$LINK" = ld-not-found; then
			AC_MSG_ERROR([Cannot find any linker!])
		fi
	else
		LINK="$GXX"
	fi
fi

if $TEST -z "$MOC"; then
	AC_PATH_PROG(MOC,moc,moc-not-found)
	if $TEST $MOC = moc-not-found; then
		AC_MSG_ERROR([Cannot find the meta object compiler!])
	fi
fi



AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(MV,mv)
AC_PATH_PROG(MKDIR,mkdir)
AC_PATH_PROG(RMDIR,rmdir)
AC_PATH_PROG(INSTALL,install)
AC_PATH_PROG(TAR,tar)
AC_PATH_PROG(GZIP,gzip,gzip-not-found)
AC_PATH_PROG(BZIP2,bzip2,bzip2-not-found)
AC_PATH_PROG(DATE,date,date-not-found)

if $TEST $GZIP != gzip-not-found; then
	DIST=gzip
else
	if $TEST $BZIP2 != bzip2-not-found; then
		DIST=bzip2
	else
		DIST=tar
	fi
fi

if $TEST $DATE = date-not-found; then
	DISTNAME="lotux"
else
	DISTNAME="\`date +lotux-%Y%m%d\`"
fi

if $TEST $prefix = NONE; then
	PREFIX=$ac_default_prefix
else
	PREFIX=$prefix
fi
DATADIR="${datadir/\${prefix\}/$PREFIX}/lotux/"

AC_SUBST(QT3INCDIR)
AC_SUBST(QT3LIBDIR)
AC_SUBST(X11INCDIR)
AC_SUBST(X11LIBDIR)
AC_SUBST(GLINCDIR)
AC_SUBST(GLLIBDIR)

AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(LINK)
AC_SUBST(LFLAGS)
AC_SUBST(MOC)

AC_SUBST(CP)
AC_SUBST(RM)
AC_SUBST(MV)
AC_SUBST(MKDIR)
AC_SUBST(RMDIR)
AC_SUBST(INSTALL)
AC_SUBST(TAR)
AC_SUBST(GZIP)
AC_SUBST(BZIP2)

AC_SUBST(DISTNAME)
AC_SUBST(DIST)

AC_SUBST(prefix)
AC_SUBST(exec_prefix)
AC_SUBST(bindir)
AC_SUBST(datadir)

AC_SUBST(DATADIR)

AC_OUTPUT(Makefile config.h)

